--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
         <title>Ajay Clark-Desai</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div id = "container">
+            <div id = "aboutMe">
+                <h1>Ajay Clark-Desai</h1>
+                <h2>Computer Engineer</h2>
+            </div>
+        </div>
+        
 
         <img src="" alt="Ajay Clark-Desai">
         
