Add dynamic age calculation and update personal information in about section

--- a/about.html
+++ b/about.html
@@ -23,11 +23,17 @@
                 <a href="projects.html">Projects</a>
                 <a href="contact.html">Contact Me</a>
             </nav>
+
         </header>
+
+        <div class = "intro">
+            <h1>Who am I</h1>
+            <p id = "home-p">I'm Ajay Clark-Desai, a student at Carnegie Mellon University majoring in Electrical and Computer Engineering.</p>
+        </div>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="" async defer></script>
+        <script src="Index.js" async defer></script>
     </body>
 </html>
