--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class = "home-content">
                 <h1>Hi, I'm <span>Ajay</span></h1>
-                <p id = "home-p">I'm a student at Carnegie Mellon University majoring in Electrical and Computer Engineering.</p>
+                <p>I'm a student at Carnegie Mellon University majoring in Electrical and Computer Engineering.</p>
                 
                 <div class = "socials">
                     <a href="https://www.linkedin.com/in/ajay-clark-desai-4087b4281/" target = "_blank"><i class = "fa-brands fa-linkedin"></i></a>
