--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
                 <a href="about.html">About Me</a>
                 <a href="projects.html">Projects</a>
                 <a href="contact.html">Contact Me</a>
+                <a href="Scripts/Resume.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <!--[if lt IE 7]>
