--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
         <link rel="stylesheet" href="style.css">
+        
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -25,6 +26,7 @@
                 <a href="about.html">About Me</a>
                 <a href="projects.html">Projects</a>
                 <a href="contact.html">Contact Me</a>
+                <a href="Scripts/Resume.pdf" target="_blank">Resume</a>
             </nav>
         </header>
 
