--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <a href="about.html">About Me</a>
                 <a href="projects.html">Projects</a>
                 <a href="contact.html">Contact Me</a>
-                <a href="Scripts/Resume.pdf" target="_blank">Resume</a>
+                <a href="Texts/Resume.pdf" target="_blank">Resume</a>
             </nav>
 
         </header>
