Refactor styles and update HTML structure for improved layout and responsiveness

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <title>About Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Styles/main.css">
     </head>
     <body>
 
@@ -35,6 +35,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="Index.js" async defer></script>
+        <script src="Scripts/Info.js" async defer></script>
     </body>
 </html>
