--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <title>Contact</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Styles/main.css">
     </head>
     <body>
         <header>
