Refactor popup styles for improved aesthetics and update project titles for clarity

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         <section class = "projects">
             
             <div class = "project" id = "project1" onclick="Popup(1)" >
-                <h2>Muse Brain Scanning Video Game Controller</h2>
+                <h2>Muse Brain Scanning</h2>
+                <h2>Video Game Controller</h2>
+                <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcS0EzUUtO1jtQQ2Gn_tnWg0zXYlPfWnleEprM6mXaW82tqM5wVg9zISPx6yK8DRVpCTnD_fjkZz-nlP76i_fQkxbsgIyznP4EPKZJDFitG7kiQe29Erp3uVtcGiIyndUJqW5m0CC90&usqp=CAc" alt="Muse Brain Scanning Video Game Controller">
             </div>
 
             <div class = "project" id = "project2" onclick="Popup(2)">
